--- a/site/404.html
+++ b/site/404.html
@@ -1,55 +1,42 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <title>Broken Hill Surf Shop Online</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+<title>Broken Hill Surf Shop Online</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
 </head>
-
 <body>
-  <!--Header (Logo) and Navigation Bar-->
-  <div id="header">
-    <header class="header">
-      <a href="home.html">
-        <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo">
-      </a>
-      <!--START Navigation Bar-->
-      <!--Well on this page it isn't a navigation bar -->
-      <div id="navigation-bar">
-        <ul>
-          <li><a>What</a>
-          </li>
-          <li><a>Did</a>
-          </li>
-          <li><a>You</a>
-          </li>
-          <li class="last"><a>Do</a>
-          </li>
-        </ul>
-      </div>
-      <!--END Navigation Bar-->
-    </header>
-  </div>
-  <div id="four_oh_four_content">
-    <div id="four_oh_four" class="four_oh_four">
-      <hr>
-      <p><a href="home.html">Return to the homepage</a>
-      </p>
-
-        <script type="text/javascript">
+<!--Header (Logo) and Navigation Bar-->
+<div id="header">
+  <header class="header"> <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> 
+    <!--START Navigation Bar--> 
+    <!--Well on this page it isn't a navigation bar -->
+    <div id="navigation-bar">
+      <ul>
+        <li><a>What</a> </li>
+        <li><a>Did</a> </li>
+        <li><a>You</a> </li>
+        <li class="last"><a>Do</a> </li>
+      </ul>
+    </div>
+    <!--END Navigation Bar--> 
+  </header>
+</div>
+<div id="four_oh_four_content">
+  <div id="four_oh_four" class="four_oh_four">
+    <hr />
+    <p><a href="home.html">Return to the homepage</a> </p>
+    <script type="text/javascript">
           if (document.referrer != "") {
           	document.write('<a href="javascript:history.back()">Click here to go back</a>');
           }
         </script> 
-    </div>
   </div>
-  <div id="footer">
-    <!--SITEMAP-->
-    <div>
-    </div>
-    <footer>© 2014 Andrew Wong & Ryan Oo</footer>
-  </div>
+</div>
+<div id="footer"> 
+  <!--SITEMAP-->
+  <div> </div>
+  <footer>© 2014 Andrew Wong & Ryan Oo</footer>
+</div>
 </body>
-
 </html>
