--- a/site/products/50010001/IPT Buy Products Page 50010001.html
+++ b/site/products/50010001/IPT Buy Products Page 50010001.html
@@ -88,7 +88,7 @@ Quantity
 <br>
 <p>
 <form action="demo_form.asp">
-<fieldset><legend>Phone number</legend>
+<fieldset><legend>Customer Details</legend>
 <p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Last Name: <input type="text" name="Last Name" value=""></p>
 <p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp First Name: <input type="text" name="First Name" value=""></p>
 <p align="left"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Address: <input type="text" name="Address" value=""></p>
