--- a/site/contact.html
+++ b/site/contact.html
@@ -7,28 +7,55 @@
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
   </head>
   <body>
-    <div id="header">
-      <header class="header headergradient">
-        <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> 
-        <!--START Navigation Bar-->
-        <div id="navigation-bar">
-          <ul>
-            <li><a href="home.html">Home</a> </li>
-            <li><a href="products.html">Products</a> </li>
-            <li><a href="about.html">About</a> </li>
-            <li class="active"><a href="contact.html">Contact</a> </li>
-            <li class="last"><a href="news.html">News</a> </li>
-          </ul>
-        </div>
-        <!--END Navigation Bar--> 
-      </header>
-    </div>
-    <div id="content"></div>
-    <div id="footer">
-      <!--SITEMAP-->
-      <div>
+    <div id="container">
+      <div id="header">
+        <header class="header headergradient">
+          <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> 
+          <!--START Navigation Bar-->
+          <div id="navigation-bar">
+            <ul>
+              <li><a href="home.html">Home</a> </li>
+              <li><a href="products.html">Products</a> </li>
+              <li><a href="about.html">About</a> </li>
+              <li class="active"><a href="contact.html">Contact</a> </li>
+              <li class="last"><a href="news.html">News</a> </li>
+            </ul>
+          </div>
+          <!--END Navigation Bar--> 
+        </header>
       </div>
-      <footer>Â© 2014 Andrew Wong & Ryan Oo</footer>
+      <div id="content"></div>
+      <div id="footer_wrapper" class="footergradient">
+        <div id="footer">
+          <!--SITEMAP-->
+          <div id="infocolumns" class="borderbottom_nocolour">
+            <div>
+              <h1>site</h1>
+              <p><a href="home.html">home</a> </p>
+              <p><a href="products.html">products</a> </p>
+              <p><a href="about.html">about</a> </p>
+              <p><a href="contact.html">contact</a> </p>
+              <p><a href="news.html">news</a> </p>
+            </div>
+            <div>
+              <h1>products</h1>
+              <p><a href="surfing">surfing</a> </p>
+              <p><a href="clothing">clothing</a> </p>
+              <p><a href="protection">protection</a> </p>
+              <p><a href="scubasnorkelpnggear">scuba/snorkeling gear</a> </p>
+              <p><a href="recreation">recreation</a> </p>
+              <p><a href="accessories">accessories</a> </p>
+            </div>
+            <div>
+              <h1>contact</h1>
+              <p>email: contact@brokenhillsurf.com.au</p>
+              <p>facebook: brokenhillsurfshop</p>
+              <p>twitter: @brokenhillsurfshop</p>
+            </div>
+          </div>
+        </div>
+        <p>© 2014 Andrew Wong & Ryan Oo</p>
+      </div>
     </div>
   </body>
 </html>
