--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
       <div class="wholepage errorpage" >
         <h1>JavaScript is disabled!</h1>
         <hr color="#77787A" />
-        <p style="font-size: 24px;">JavaScript is required to browse Broken Hill Surf Shop.<br />Please enable JavaScript to continue!</p>
+        <p style="font-size: 24px;">JavaScript is required to browse Broken Hill Surf Shop.<br />
+          Please enable JavaScript to continue!
+        </p>
         <p>If you do not know how to enable JavaScript, please <a href="http://www.enable-javascript.com/" target="_blank">click here</a>.</p>
       </div>
     </noscript>
@@ -45,7 +47,9 @@
         <div class="wholepage errorpage">
           <h1>Oh No! Your Browser!</h1>
           <hr color="#77787A" />
-          <p style="font-size: 24px;">You are using an outdated web browser.<br />Please upgrade your web browser to continue browsing Broken Hill Surf Shop.</p>
+          <p style="font-size: 24px;">You are using an outdated web browser.<br />
+            Please upgrade your web browser to continue browsing Broken Hill Surf Shop.
+          </p>
           <p style="font-size: 72px">Consider using</p>
           <p><a href="http://www.mozilla.org/firefox/"><img src="assets/images/badbrowser_assets/firefox.png" height="150" alt="Mozilla Firefox logo" /></a></p>
           <p><a href="http://www.google.com/chrome"><img src="assets/images/badbrowser_assets/chrome.png" height="150" alt="Google Chrome logo" /></a></p>
