--- a/site/404.html
+++ b/site/404.html
@@ -1,42 +1,71 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Broken Hill Surf Shop Online</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
-</head>
-<body>
-<!--Header (Logo) and Navigation Bar-->
-<div id="header">
-  <header class="header"> <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> 
-    <!--START Navigation Bar--> 
-    <!--Well on this page it isn't a navigation bar -->
-    <div id="navigation-bar">
-      <ul>
-        <li><a>What</a> </li>
-        <li><a>Did</a> </li>
-        <li><a>You</a> </li>
-        <li class="last"><a>Do</a> </li>
-      </ul>
+  <head>
+    <title>Broken Hill Surf Shop Online</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
+  </head>
+  <body>
+    <div id="container">
+      <!--Header (Logo) and Navigation Bar-->
+      <div id="header">
+        <header class="header">
+          <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> 
+          <!--START Navigation Bar--> 
+          <!--Well on this page it isn't a navigation bar -->
+          <div id="navigation-bar">
+            <ul>
+              <li><a>What</a> </li>
+              <li><a>Did</a> </li>
+              <li><a>You</a> </li>
+              <li class="last"><a>Do</a> </li>
+            </ul>
+          </div>
+          <!--END Navigation Bar--> 
+        </header>
+      </div>
+      <div id="four_oh_four_content">
+        <div id="four_oh_four" class="four_oh_four">
+          <hr />
+          <p><a href="home.html">Return to the homepage</a> </p>
+          <script type="text/javascript">
+            if (document.referrer != "") {
+            	document.write('<a href="javascript:history.back()">Click here to go back</a>');
+            }
+          </script> 
+        </div>
+      </div>
+      <div id="footer_wrapper" class="footergradient">
+        <div id="footer">
+          <!--SITEMAP-->
+          <div id="infocolumns" class="borderbottom_nocolour">
+            <div>
+              <h1>site</h1>
+              <p><a href="home.html">home</a> </p>
+              <p><a href="products.html">products</a> </p>
+              <p><a href="about.html">about</a> </p>
+              <p><a href="contact.html">contact</a> </p>
+              <p><a href="news.html">news</a> </p>
+            </div>
+            <div>
+              <h1>products</h1>
+              <p><a href="surfing">surfing</a> </p>
+              <p><a href="clothing">clothing</a> </p>
+              <p><a href="protection">protection</a> </p>
+              <p><a href="scubasnorkelpnggear">scuba/snorkeling gear</a> </p>
+              <p><a href="recreation">recreation</a> </p>
+              <p><a href="accessories">accessories</a> </p>
+            </div>
+            <div>
+              <h1>contact</h1>
+              <p>email: contact@brokenhillsurf.com.au</p>
+              <p>facebook: brokenhillsurfshop</p>
+              <p>twitter: @brokenhillsurfshop</p>
+            </div>
+          </div>
+        </div>
+        <p>© 2014 Andrew Wong & Ryan Oo</p>
+      </div>
     </div>
-    <!--END Navigation Bar--> 
-  </header>
-</div>
-<div id="four_oh_four_content">
-  <div id="four_oh_four" class="four_oh_four">
-    <hr />
-    <p><a href="home.html">Return to the homepage</a> </p>
-    <script type="text/javascript">
-          if (document.referrer != "") {
-          	document.write('<a href="javascript:history.back()">Click here to go back</a>');
-          }
-        </script> 
-  </div>
-</div>
-<div id="footer"> 
-  <!--SITEMAP-->
-  <div> </div>
-  <footer>Â© 2014 Andrew Wong & Ryan Oo</footer>
-</div>
-</body>
+  </body>
 </html>
