--- a/site/home.html
+++ b/site/home.html
@@ -6,30 +6,6 @@
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
     <!--jQuery -->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
-    <!--WHEN FINISHED REMOVE THE http: from the jQuery link!!!!-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
     <!--
       Nivo Slider
@@ -49,50 +25,86 @@
     </script>
   </head>
   <body>
-    <!--Header (Logo) and Navigation Bar-->
-    <div id="header">
-      <header class="header headergradient">
-        <a href="home.html">
-        <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" />
-        </a>
-        <!--START Navigation Bar-->
-        <div id="navigation-bar">
-          <ul>
-            <li class="active"><a href="home.html">Home</a>
-            </li>
-            <li><a href="products.html">Products</a>
-            </li>
-            <li><a href="about.html">About</a>
-            </li>
-            <li><a href="contact.html">Contact</a>
-            </li>
-            <li class="last"><a href="news.html">News</a>
-            </li>
-          </ul>
-        </div>
-        <!--END Navigation Bar-->
-      </header>
-    </div>
-    <div id="content">
-      <!--START Nivo Slider-->
-      <div class="slider-wrapper ribbon">
-        <div id="slider" class="nivoSlider">
-          <img src="../assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" />
-          <img src="../assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2" />
-          <img src="../assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3" />
-          <img src="../assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" />
-          <img src="../assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption" />
-        </div>
-        <div id="htmlcaption" class="nivo-html-caption"> <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.</div>
+    <div id="container">
+      <!--Header (Logo) and Navigation Bar-->
+      <div id="header">
+        <header class="header headergradient">
+          <a href="home.html"> <img src="../assets/images/logo.png" class="logo" alt="Broken Hill Surf Shop Logo" /> </a> 
+          <!--START Navigation Bar-->
+          <div id="navigation-bar">
+            <ul>
+              <li class="active"><a href="home.html">Home</a> </li>
+              <li><a href="products.html">Products</a> </li>
+              <li><a href="about.html">About</a> </li>
+              <li><a href="contact.html">Contact</a> </li>
+              <li class="last"><a href="news.html">News</a> </li>
+            </ul>
+          </div>
+          <!--END Navigation Bar--> 
+        </header>
       </div>
-      <!--END Nivo Slider-->
-      Top Products
-    </div>
-    <div id="footer">
-      <!--SITEMAP-->
-      <div>
+      <div id="content">
+        <!--START Nivo Slider-->
+        <div class="slider-wrapper ribbon">
+          <div id="slider" class="nivoSlider"> <img src="../assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" /> <img src="../assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2" /> <img src="../assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3" /> <img src="../assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" /> <img src="../assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption" /> </div>
+          <div id="htmlcaption" class="nivo-html-caption"> <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.</div>
+        </div>
+        <!--END Nivo Slider-->
+        <div>
+          <h1>Top Products</h1>
+          <div id="infocolumns">
+            <div>
+              <div>Product Name</div>
+              <div>Product Image</div>
+              <div>Product Price</div>
+              <div>Product Description?</div>
+            </div>
+            <div>
+              <div>Product Name</div>
+              <div>Product Image</div>
+              <div>Product Price</div>
+              <div>Product Description?</div>
+            </div>
+            <div>
+              <div>Product Name</div>
+              <div>Product Image</div>
+              <div>Product Price</div>
+              <div>Product Description?</div>
+            </div>
+          </div>
+        </div>
       </div>
-      <footer>Â© 2014 Andrew Wong & Ryan Oo</footer>
+      <div id="footer_wrapper" class="footergradient">
+        <div id="footer">
+          <!--SITEMAP-->
+          <div id="infocolumns" class="borderbottom_nocolour">
+            <div>
+              <h1>site</h1>
+              <p><a href="home.html">home</a> </p>
+              <p><a href="products.html">products</a> </p>
+              <p><a href="about.html">about</a> </p>
+              <p><a href="contact.html">contact</a> </p>
+              <p><a href="news.html">news</a> </p>
+            </div>
+            <div>
+              <h1>products</h1>
+              <p><a href="surfing">surfing</a> </p>
+              <p><a href="clothing">clothing</a> </p>
+              <p><a href="protection">protection</a> </p>
+              <p><a href="scubasnorkelpnggear">scuba/snorkeling gear</a> </p>
+              <p><a href="recreation">recreation</a> </p>
+              <p><a href="accessories">accessories</a> </p>
+            </div>
+            <div>
+              <h1>contact</h1>
+              <p>email: contact@brokenhillsurf.com.au</p>
+              <p>facebook: brokenhillsurfshop</p>
+              <p>twitter: @brokenhillsurfshop</p>
+            </div>
+          </div>
+        </div>
+        <p>© 2014 Andrew Wong & Ryan Oo</p>
+      </div>
     </div>
   </body>
 </html>
