* Fix copyright character

--- a/site/home.html
+++ b/site/home.html
@@ -103,7 +103,7 @@
             </div>
           </div>
         </div>
-        <p>© 2014 Andrew Wong & Ryan Oo</p>
+        <p>&copy; 2014 Andrew Wong & Ryan Oo</p>
       </div>
     </div>
   </body>
