--- a/site/404.html
+++ b/site/404.html
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <p>© 2014 Andrew Wong & Ryan Oo</p>
+        <p>&copy; 2014 Andrew Wong & Ryan Oo</p>
       </div>
     </div>
   </body>
