* Fix copyright character + Add product code

--- a/site/products.html
+++ b/site/products.html
@@ -60,7 +60,8 @@
           <div class="producttext">
             <div class="productinfo_upper">
               <!--Wrapper -->
-              <div id="productname" class="borderbottom"></div>
+              <div id="productname"></div>
+              <div id="productcode" class="borderbottom"></div>
               <div id="productdatabaseinfo_price"></div>
               <div id="productdatabaseinfo_availability"></div>
             </div>
@@ -104,7 +105,7 @@
             </div>
           </div>
         </div>
-        <p>© 2014 Andrew Wong & Ryan Oo</p>
+        <p>&copy; 2014 Andrew Wong & Ryan Oo</p>
       </div>
     </div>
   </body>
