--- a/site/home.html
+++ b/site/home.html
@@ -91,7 +91,7 @@
               <p><a href="surfing">surfing</a> </p>
               <p><a href="clothing">clothing</a> </p>
               <p><a href="protection">protection</a> </p>
-              <p><a href="scubasnorkelpnggear">scuba/snorkeling gear</a> </p>
+              <p><a href="scubasnorkelinggear">scuba/snorkeling gear</a> </p>
               <p><a href="recreation">recreation</a> </p>
               <p><a href="accessories">accessories</a> </p>
             </div>
