--- a/site/products.html
+++ b/site/products.html
@@ -42,12 +42,12 @@
           <!--START Product Navigation Bar-->
           <div id="product-navigation-bar">
             <ul>
-              <li id="product_category_surfing"><a href="">Surfing</a> </li>
-              <li id="product_category_clothing"><a href="">Clothing</a> </li>
-              <li id="product_category_protection"><a href="">Protection</a> </li>
-              <li id="product_category_scubasnorkeling_gear"><a href="">Scuba/Snorkeling Gear</a> </li>
-              <li id="product_category_recreation"><a href="">Recreation</a> </li>
-              <li id="product_category_accessory" class="last"><a href="">Accessories</a> </li>
+              <li id="product_category_surfing"><a href="surfing">Surfing</a> </li>
+              <li id="product_category_clothing"><a href="clothing">Clothing</a> </li>
+              <li id="product_category_protection"><a href="protection">Protection</a> </li>
+              <li id="product_category_scubasnorkeling_gear"><a href="scubasnorkelinggear">Scuba/Snorkeling Gear</a> </li>
+              <li id="product_category_recreation"><a href="recreation">Recreation</a> </li>
+              <li id="product_category_accessories" class="last"><a href="accessories">Accessories</a> </li>
             </ul>
           </div>
           <!--END Product Navigation Bar--> 
@@ -93,7 +93,7 @@
               <p><a href="surfing">surfing</a> </p>
               <p><a href="clothing">clothing</a> </p>
               <p><a href="protection">protection</a> </p>
-              <p><a href="scubasnorkelpnggear">scuba/snorkeling gear</a> </p>
+              <p><a href="scubasnorkelinggear">scuba/snorkeling gear</a> </p>
               <p><a href="recreation">recreation</a> </p>
               <p><a href="accessories">accessories</a> </p>
             </div>
