--- a/site/products.html
+++ b/site/products.html
@@ -10,7 +10,7 @@
     <script src="../assets/js/jquery.barcode.min.js"></script>
     <script>
       var hasargs;
-      var productvalid = false;
+      var productready = false;
       var productinfo;
       var parameters = window.location.toString();
       beginload();
