--- a/site/home.html
+++ b/site/home.html
@@ -46,7 +46,13 @@
       <div id="content">
         <!--START Nivo Slider-->
         <div class="slider-wrapper ribbon">
-          <div id="slider" class="nivoSlider"> <img src="../assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" /> <img src="../assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2" /> <img src="../assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3" /> <img src="../assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" /> <img src="../assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption" /> </div>
+          <div id="slider" class="nivoSlider">
+            <img src="../assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" />
+            <img src="../assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2" />
+            <img src="../assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3" />
+            <img src="../assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" />
+            <img src="../assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption" />
+          </div>
           <div id="htmlcaption" class="nivo-html-caption"> <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.</div>
         </div>
         <!--END Nivo Slider-->
