--- a/site/home.html
+++ b/site/home.html
@@ -46,14 +46,16 @@
       <div id="content">
         <!--START Nivo Slider-->
         <div class="slider-wrapper ribbon">
-          <div id="slider" class="nivoSlider">
-            <img src="../assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" />
-            <img src="../assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2" />
-            <img src="../assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3" />
-            <img src="../assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" title="#htmlcaption" />
-            <img src="../assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="This is an example of a caption" />
-          </div>
-          <div id="htmlcaption" class="nivo-html-caption"> <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>.</div>
+          <div id="slider" class="nivoSlider"> <img src="../assets/images/nivo-slider/slides/slide_1.jpg" alt="Slide 1" title="#slider_1"/> <img src="../assets/images/nivo-slider/slides/slide_2.jpg" alt="Slide 2" title="#slider_2"/> <img src="../assets/images/nivo-slider/slides/slide_3.jpg" alt="Slide 3" title="#slider_3" /> <img src="../assets/images/nivo-slider/slides/slide_4.jpg" alt="Slide 4" /> <img src="../assets/images/nivo-slider/slides/slide_5.jpg" alt="Slide 5" title="#slider_5"/> <img src="../assets/images/nivo-slider/slides/slide_6.jpg" alt="Slide 6" title="#slider_6"/> <img src="../assets/images/nivo-slider/slides/slide_7.jpg" alt="Slide 7" title="#slider_7"/> <img src="../assets/images/nivo-slider/slides/slide_8.jpg" alt="Slide 8" title="#slider_8"/></div>
+          <!-- Slider Captions -->
+          <div id="slider_1" class="nivo-html-caption">Welcome to Broken Hill Surf Shop!</div>
+          <div id="slider_2" class="nivo-html-caption">Supplying surf gear and accessories since '14!</div>
+          <div id="slider_3" class="nivo-html-caption">A variety of high-quality surfboards are just at your fingertips. <a href="surfing">Find yours today</a>!</div>
+          <!-- No description for slide 4 -> spacer -->
+          <div id="slider_5" class="nivo-html-caption">Have an interest in scuba diving or snorkeling? <a href="scubasnorkelinggear">We're here for you</a>!</div>
+          <div id="slider_6" class="nivo-html-caption">Broken Hill Surf Shop caters for everyone.</div>
+          <div id="slider_7" class="nivo-html-caption">Broken Hill Surf Shop caters for everyone. <em style="vertical-align: middle; font-size: 10px">And everything...</em></div>
+          <div id="slider_8" class="nivo-html-caption">Equipment for families <a href="recreation">also available</a>!</div>
         </div>
         <!--END Nivo Slider-->
         <div>
