* Reflect .nomargin class

--- a/site/404.html
+++ b/site/404.html
@@ -35,10 +35,10 @@
           </script> 
         </div>
       </div>
-      <div id="footer_wrapper" class="footergradient">
-        <div id="footer">
+      <div id="footer_wrapper" class="footergradient nomargin">
+        <div id="footer" class="nomargin">
           <!--SITEMAP-->
-          <div id="infocolumns" class="borderbottom_nocolour">
+          <div id="infocolumns" class="borderbottom">
             <div>
               <h1>site</h1>
               <p><a href="home.html">home</a> </p>
