--- a/site/news.html
+++ b/site/news.html
@@ -25,10 +25,10 @@
         </header>
       </div>
       <div id="content"></div>
-      <div id="footer_wrapper" class="footergradient">
-        <div id="footer">
+      <div id="footer_wrapper" class="footergradient nomargin">
+        <div id="footer" class="nomargin">
           <!--SITEMAP-->
-          <div id="infocolumns" class="borderbottom_nocolour">
+          <div id="infocolumns" class="borderbottom">
             <div>
               <h1>site</h1>
               <p><a href="home.html">home</a> </p>
