--- a/site/products.html
+++ b/site/products.html
@@ -61,14 +61,14 @@
             <div class="productinfo_upper">
               <!--Wrapper -->
               <div id="productname"></div>
-              <div id="productcode" class="borderbottom"></div>
+              <div id="productcode" class="borderbottom borderc"></div>
               <div id="productdatabaseinfo_price"></div>
               <div id="productdatabaseinfo_availability"></div>
             </div>
             <div class="productinfo_lower">
-              <div id="productdescription" class="borderbottom"></div>
+              <div id="productdescription" class="borderbottom borderc"></div>
               <div id="productbarcode_wrapper">
-                <div id="productbarcode_wrapper_subwrapper">
+                <div id="productbarcode_wrapper_subwrapper" class="nomargin">
                   <div id="productbarcode"></div>
                 </div>
               </div>
@@ -76,10 +76,10 @@
           </div>
         </div>
       </div>
-      <div id="footer_wrapper" class="footergradient">
-        <div id="footer">
+      <div id="footer_wrapper" class="footergradient nomargin">
+        <div id="footer" class="nomargin">
           <!--SITEMAP-->
-          <div id="infocolumns" class="borderbottom_nocolour">
+          <div id="infocolumns" class="borderbottom">
             <div>
               <h1>site</h1>
               <p><a href="home.html">home</a> </p>
