* Finish top items info

--- a/site/home.html
+++ b/site/home.html
@@ -59,33 +59,48 @@
         </div>
         <!--END Nivo Slider-->
         <div>
-          <h1>Top Products</h1>
+          <h1 style="margin: 10px;">Top Products</h1>
           <div id="infocolumns">
             <div>
-              <div>Product Name</div>
-              <div>Product Image</div>
-              <div>Product Price</div>
-              <div>Product Description?</div>
+              <div>
+                <h2 class="nomargin">Mid-length Surfboard</h2>
+              </div>
+              <div><img class="himage" src="products/50020002/product.jpg"/></div>
+              <div>$419</div>
+              <div>
+                Great for surfers wanting to catch waves easily while still retaining a certain degree of maneuverability.
+                <p><a href="products.html?50020002">Read More ...</a></p>
+              </div>
             </div>
             <div>
-              <div>Product Name</div>
-              <div>Product Image</div>
-              <div>Product Price</div>
-              <div>Product Description?</div>
+              <div>
+                <h2 class="nomargin">Wet Suit</h2>
+              </div>
+              <div><img class="himage" src="products/50130013/product.jpg"/></div>
+              <div>$439</div>
+              <div>
+                High-quality flexible rubber body clothing for underwater diving
+                <p><a href="products.html?50130013">Read More ...</a></p>
+              </div>
             </div>
             <div>
-              <div>Product Name</div>
-              <div>Product Image</div>
-              <div>Product Price</div>
-              <div>Product Description?</div>
+              <div>
+                <h2 class="nomargin">Sunscreen</h2>
+              </div>
+              <div><img class="himage" src="products/50490049/product.jpg"/></div>
+              <div>$25</div>
+              <div>
+                Protect your skin from harmful UV rays. Contains aloe vera extract to also nourish the skin.
+                <p><a href="products.html?50490049">Read More ...</a></p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="footer_wrapper" class="footergradient">
-        <div id="footer">
+      <div id="footer_wrapper" class="footergradient nomargin">
+        <div id="footer" class="nomargin">
           <!--SITEMAP-->
-          <div id="infocolumns" class="borderbottom_nocolour">
+          <div id="infocolumns" class="borderbottom">
             <div>
               <h1>site</h1>
               <p><a href="home.html">home</a> </p>
