* Move 404 CSS out of glbal style sheet and put in 404.html

--- a/site/404.html
+++ b/site/404.html
@@ -4,6 +4,21 @@
     <title>Broken Hill Surf Shop Online</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
+    <style type="text/css">
+      #four_oh_four:before {
+	    /* Image location for the 404 image */
+	    content: url('../images/404.png');
+      }
+      .four_oh_four {
+	    /* Set font size of the "go back/home" text */
+	    font-size: 48px;
+	    line-height: 15px;
+      }
+      #four_oh_four_content {
+	    margin: 150px auto;
+        text-align: center;
+      }
+	</style>
   </head>
   <body>
     <div id="container">
