* Hint hint, GitHub * Browser error loop fix (Redirect to the check IE page)

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ display: none
   <hr color="#77787A" />
   <p style="font-size: 24px;">Unfortunately, Internet Explorer just doesn't work. (Styles get broken)<br />
     Please use a different web browser to continue browsing Broken Hill Surf Shop.<br />
-    To view a partially working online copy, <a href="http://bearbear12345.github.io/school_ipt_as3">click here.</a></p>
+    To view a working online copy (via GitHub), <a href="http://bearbear12345.github.io/school_ipt_as3/site/home.html">click here.</a></p>
   <p style="font-size: 72px">Consider using</p>
   <p><a href="http://www.mozilla.org/firefox/"><img src="assets/images/badbrowser_assets/firefox.png" height="150" alt="Mozilla Firefox logo" /></a></p>
   <p><a href="http://www.google.com/chrome"><img src="assets/images/badbrowser_assets/chrome.png" height="150" alt="Google Chrome logo" /></a></p>
